Solar System (WIP)
Added Solar System(WIP)

--- a/example2/index.html
+++ b/example2/index.html
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		<!-- Uncomment to add a spinner -->
-		<!-- div id="loader"></div> -->
+		<div id="loader"></div>
         <script type="module" src="./script.js"></script>
 	</body>
 </html>
