--- a/SolarSystem/index.html
+++ b/SolarSystem/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>S1 - Lecture 2 - Example 3</title>
+		<title>Solar System</title>
 		<style>
 			body { margin: 0; 
                     width: auto;
