--- a/SolarSystem/index.html
+++ b/SolarSystem/index.html
@@ -43,9 +43,9 @@
             }
             #buttons{
                 position: absolute;
+                width: 100%;
                 top: 10px;
                 text-align: center;
-                width: 100vh;
             }
 
             #play{
@@ -54,7 +54,6 @@
                 background-color: red;
                 font-size: 16px;
                 padding : 5px;
-                margin-right: 0px;
                 font-family: monospace;
             }
 
@@ -64,7 +63,6 @@
                 background-color: red;
                 font-size: 16px;
                 padding : 5px;
-                margin-right: 0px;
                 font-family: monospace;
             }
 
