--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id = "inner">
                 <p id = "welcome">Welcome to the Sophie System</p>
                 <br>
-                <button id = "linkButton"><a id = "link" href="./SolarSystem">Enter</a></button>
+                <button id = "linkButton"><a id = "link" href="./SolarSystem/">Enter</a></button>
             </div>
         </div>  
     </body>
