Sun rotation and minor index formatting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
             #inner{
                 position: relative;
-                top: 50%;
+                top: 42%;
             }
             #welcome{
                 font-size: 25px;
@@ -42,7 +42,7 @@
             <div id = "inner">
                 <p id = "welcome">Welcome to the Sophie System</p>
                 <br>
-                <button id = "linkButton"><a id = "link" href="./SolarSystem/">Enter</a></button>
+                <button id = "linkButton"><a id = "link" href="./SolarSystem">Enter</a></button>
             </div>
         </div>  
     </body>
